tests/neg/type_error3.scala
class Main {
  def main = {
    def plus(a: Int, b: Int) = a + b
    plus(1, "2")
  }
}